@@ -1,3 +1,7 @@
+Tue Mar  4 09:24:40 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib: Upgrade to 20080301.
+
 Tue Mar  4 09:18:43 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (options): Force --extension to appear after --sections
